--- a/index.html
+++ b/index.html
@@ -1,229 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Tamil Nadu Bus Directory</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap">
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Inter', sans-serif;
-    }
-    body {
-      background: #f7f9fb;
-      color: #2d3748;
-      padding: 20px;
-    }
-    header {
-      background: #2b6cb0;
-      color: white;
-      padding: 20px;
-      border-radius: 12px;
-      text-align: center;
-      margin-bottom: 30px;
-    }
-    header h1 {
-      font-size: 2rem;
-      margin-bottom: 8px;
-    }
-    main {
-      max-width: 800px;
-      margin: auto;
-      background: white;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    }
-    label {
-      font-weight: 600;
-      display: block;
-      margin-top: 15px;
-      margin-bottom: 5px;
-    }
-    select {
-      width: 100%;
-      padding: 10px;
-      border-radius: 8px;
-      border: 1px solid #cbd5e0;
-      margin-bottom: 15px;
-    }
-    .message {
-      font-weight: bold;
-      color: #e53e3e;
-      margin-top: 10px;
-    }
-    .result-section {
-      margin-top: 20px;
-    }
-    .result-section h3 {
-      font-size: 1.25rem;
-      margin-bottom: 10px;
-      color: #2c5282;
-    }
-    .result-section ul {
-      list-style: none;
-      padding-left: 0;
-    }
-    .result-section li {
-      background: #edf2f7;
-      margin-bottom: 8px;
-      padding: 10px;
-      border-radius: 8px;
-    }
-    .result-section small {
-      color: #718096;
-    }
-    footer {
-      text-align: center;
-      margin-top: 40px;
-      color: #718096;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tamilnadu Bus Route Finder - Tiruppur</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            color: #333;
+            background-color: #f5f5f5;
+        }
+        header {
+            background-color: #d40000;
+            color: white;
+            padding: 1rem;
+            text-align: center;
+        }
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 1rem;
+        }
+        .search-box {
+            background: white;
+            padding: 2rem;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            margin-bottom: 2rem;
+        }
+        .form-group {
+            margin-bottom: 1rem;
+        }
+        label {
+            display: block;
+            margin-bottom: 0.5rem;
+            font-weight: bold;
+        }
+        select, input {
+            width: 100%;
+            padding: 0.75rem;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            font-size: 1rem;
+        }
+        button {
+            background-color: #d40000;
+            color: white;
+            border: none;
+            padding: 0.75rem 1.5rem;
+            font-size: 1rem;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+        .popular-routes {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+            gap: 1rem;
+        }
+        .route-card {
+            background: white;
+            padding: 1rem;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        }
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 1rem;
+            margin-top: 2rem;
+        }
+    </style>
 </head>
 <body>
-  <header>
-    <h1>Tamil Nadu Bus Directory</h1>
-    <p>Select your city and area to explore bus routes and stops</p>
-  </header>
-  <main>
-    <section>
-      <label for="citySelect">City:</label>
-      <select id="citySelect" onchange="populateSubCities()">
-        <option value="">Select a City</option>
-        <option value="tiruppur">Tiruppur (Available)</option>
-        <option value="chennai">Chennai (Coming Soon)</option>
-        <option value="coimbatore">Coimbatore (Coming Soon)</option>
-      </select>
-      <label for="subCitySelect">Sub-City/Area:</label>
-      <select id="subCitySelect" style="display: none;" onchange="showSelectedArea()">
-        <option value="">Select a Sub-City</option>
-      </select>
-      <div id="message" class="message"></div>
-    </section>
-    <section class="result-section" id="resultSection"></section>
-  </main>
-  <footer>
-    <p>Made with love by GHOTSOO</p>
-  </footer>
-  <script>
-    const tiruppurSubAreas = {
-      "palladam": {
-        name: "Palladam",
-        routes: [
-          {
-            destination: "Udumalpet",
-            stops: ["Palladam", "Mangalam", "Madathukulam", "Udumalpet"],
-            busNumbers: ["10", "10A", "10B"]
-          },
-          {
-            destination: "Pollachi",
-            stops: ["Palladam", "Sultanpet", "Kinathukadavu", "Pollachi"],
-            busNumbers: ["20", "20A"]
-          },
-          {
-            destination: "Coimbatore",
-            stops: ["Palladam", "Sulur", "Singanallur", "Peelamedu", "Gandhipuram"],
-            busNumbers: ["5", "5A", "5B"] // Removed 14
-          }
-        ]
-      },
-      "tiruppur-old-bus-stand": {
-        name: "Tiruppur Old Bus Stand",
-        routes: [
-          {
-            destination: "Somanur",
-            stops: ["Tiruppur Old Bus Stand", "Veerapandi", "Mangalam", "Somanur"],
-            busNumbers: ["5", "5A", "5B", "14", "32B"]
-          },
-          {
-            destination: "From Somanur to Coimbatore",
-            stops: ["Somanur", "Sulur", "Singanallur", "Peelamedu", "Gandhipuram"],
-            busNumbers: ["20A", "30D", "30F", "30G", "40A", "90A"]
-          },
-          {
-            destination: "Erode",
-            stops: ["Tiruppur Old Bus Stand", "Perumanallur", "Perundurai", "Erode"],
-            busNumbers: ["26", "26A", "54", "43"]
-          },
-          {
-            destination: "Palladam",
-            stops: ["Tiruppur Old Bus Stand", "Mangalam", "Palladam"],
-            busNumbers: ["10", "10A"]
-          },
-          {
-            destination: "Kangeyam",
-            stops: ["Tiruppur Old Bus Stand", "Uthukuli", "Kangeyam"],
-            busNumbers: ["12", "12A"]
-          },
-          {
-            destination: "Dharapuram",
-            stops: ["Tiruppur Old Bus Stand", "Uthukuli", "Kangeyam", "Dharapuram"],
-            busNumbers: ["15", "15A", "15B"]
-          },
-          {
-            destination: "Avinashi",
-            stops: ["Tiruppur Old Bus Stand", "Perumanallur", "Avinashi"],
-            busNumbers: ["16", "16A"]
-          }
-        ]
-      }
-    };
+    <header>
+        <h1>Tamilnadu Bus Route Finder</h1>
+        <p>Find bus numbers, routes, and schedules for Tiruppur and across Tamilnadu</p>
+    </header>
 
-    function populateSubCities() {
-      const city = document.getElementById("citySelect").value;
-      const subCitySelect = document.getElementById("subCitySelect");
-      const messageDiv = document.getElementById("message");
-      const resultSection = document.getElementById("resultSection");
+    <div class="container">
+        <div class="search-box">
+            <h2>Find Your Bus</h2>
+            <form id="busSearchForm">
+                <div class="form-group">
+                    <label for="from">From:</label>
+                    <select id="from" required>
+                        <option value="">Select starting point</option>
+                        <option value="tiruppur">Tiruppur</option>
+                        <option value="coimbatore">Coimbatore</option>
+                        <option value="erode">Erode</option>
+                        <option value="salem">Salem</option>
+                        <option value="chennai">Chennai</option>
+                        <option value="madurai">Madurai</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="to">To:</label>
+                    <select id="to" required>
+                        <option value="">Select destination</option>
+                        <option value="tiruppur">Tiruppur</option>
+                        <option value="coimbatore">Coimbatore</option>
+                        <option value="erode">Erode</option>
+                        <option value="salem">Salem</option>
+                        <option value="chennai">Chennai</option>
+                        <option value="madurai">Madurai</option>
+                    </select>
+                </div>
+                <button type="submit">Search Buses</button>
+            </form>
+        </div>
 
-      subCitySelect.innerHTML = '<option value="">Select a Sub-City</option>';
-      messageDiv.textContent = "";
-      resultSection.innerHTML = "";
+        <h2>Popular Routes from Tiruppur</h2>
+        <div class="popular-routes">
+            <div class="route-card">
+                <h3>Tiruppur to Coimbatore</h3>
+                <p><strong>Bus Numbers:</strong> 12A, 34B, 56C</p>
+                <p><strong>Frequency:</strong> Every 15 minutes</p>
+                <p><strong>First Bus:</strong> 5:00 AM</p>
+                <p><strong>Last Bus:</strong> 10:30 PM</p>
+            </div>
+            <div class="route-card">
+                <h3>Tiruppur to Erode</h3>
+                <p><strong>Bus Numbers:</strong> 78D, 89E, 23F</p>
+                <p><strong>Frequency:</strong> Every 30 minutes</p>
+                <p><strong>First Bus:</strong> 5:30 AM</p>
+                <p><strong>Last Bus:</strong> 9:45 PM</p>
+            </div>
+            <div class="route-card">
+                <h3>Tiruppur to Chennai</h3>
+                <p><strong>Bus Numbers:</strong> 101, 102 (Express)</p>
+                <p><strong>Frequency:</strong> Hourly</p>
+                <p><strong>First Bus:</strong> 6:00 AM</p>
+                <p><strong>Last Bus:</strong> 10:00 PM</p>
+            </div>
+        </div>
+    </div>
 
-      if (city === "tiruppur") {
-        for (const key in tiruppurSubAreas) {
-          const option = document.createElement("option");
-          option.value = key;
-          option.textContent = tiruppurSubAreas[key].name;
-          subCitySelect.appendChild(option);
-        }
-        subCitySelect.style.display = "block";
-      } else if (city) {
-        subCitySelect.style.display = "none";
-        messageDiv.textContent = "This area will be available soon!";
-      } else {
-        subCitySelect.style.display = "none";
-        messageDiv.textContent = "";
-      }
-    }
+    <footer>
+        <p>&copy; 2023 Tamilnadu Bus Route Finder. All rights reserved.</p>
+    </footer>
 
-    function showSelectedArea() {
-      const selectedKey = document.getElementById("subCitySelect").value;
-      const resultSection = document.getElementById("resultSection");
-
-      if (selectedKey && tiruppurSubAreas[selectedKey]) {
-        const area = tiruppurSubAreas[selectedKey];
-        let htmlContent = `<h3>${area.name}</h3><p>Buses travel from this area to:</p><ul>`;
-
-        area.routes.forEach(route => {
-          htmlContent += `<li><strong>${route.destination}</strong><br>`;
-          if (route.stops && route.stops.length) {
-            htmlContent += `<small>Stops: ${route.stops.join(" → ")}</small><br>`;
-          }
-          if (route.busNumbers && route.busNumbers.length) {
-            htmlContent += `<small>Bus Numbers: ${route.busNumbers.join(", ")}</small>`;
-          }
-          htmlContent += `</li>`;
+    <script>
+        document.getElementById('busSearchForm').addEventListener('submit', function(e) {
+            e.preventDefault();
+            const from = document.getElementById('from').value;
+            const to = document.getElementById('to').value;
+            
+            if(from && to) {
+                alert(`Searching for buses from ${from} to ${to}. This would show results in a real implementation.`);
+                // In a real implementation, this would fetch data from an API or database
+            }
         });
-
-        htmlContent += `</ul>`;
-        resultSection.innerHTML = htmlContent;
-      } else {
-        resultSection.innerHTML = "";
-      }
-    }
-  </script>
+    </script>
 </body>
 </html>
